Wed Mar 13 14:38:53 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/missing.h (struct timespec): include <sys/time.h>

Wed Mar 13 13:54:45 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: check struct timeval exist or not.
	* include/ruby/missing.h (struct timeval): check HAVE_STRUCT_TIMEVAL
	  properly. and don't include sys/time.h if struct timeval exist.

	* file.c: include sys/time.h explicitly.
	* random.c: ditto.
	* thread_pthread.c: ditto.
	* time.c: ditto.
	* ext/date/date_strftime.c: ditto.

Wed Mar 13 05:49:29 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/irb.rb:  Fix typo

Tue Mar 12 22:20:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments, iseq_compile_each): support required
	  keyword arguments.   [ruby-core:51454] [Feature #7701]

	* iseq.c (rb_iseq_parameters): ditto.

	* parse.y (f_kw, f_block_kw): ditto.  this syntax is still
	  experimental, the notation may change.

	* vm_core.h (rb_iseq_struct): ditto.

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): ditto.

Tue Mar 12 17:02:53 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* date_core.c: clearly specify operator precedence.

Tue Mar 12 17:00:45 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* insns.def: fix condition.

Tue Mar 12 16:48:19 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* rational.c: fix dangling if, else-if and else.

Tue Mar 12 06:27:59 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Don't delete non-rubygems
	  files when installing RubyGems.
	* test/rubygems/test_gem_commands_setup_command.rb:  Test for the
	  above.

	* lib/rubygems/ext/ext_conf_builder.rb:  Use full path to siteconf.rb
	  in case the extconf.rb changes directories (like memcached does).

	* lib/rubygems/package.rb:  Remove double slash from path.
	* test/rubygems/test_gem_package.rb:  Test for the above.
	* test/rubygems/test_gem_package_old.rb:  ditto.

	* lib/rubygems/source.rb:  Revert automatic HTTPS upgrade